--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Me</title>
+    <title>About Wing</title>
     <link href="style.css" rel="stylesheet">
 </head>
     <body>
         <div>
-            <br>
+           
         <h1>Wing</h1>
-        <p>
-            <i>Me: I really want to travel <br>
-                My bank account: like going yo the backyard?</i>
+
+        <p class="quote">
+            <i><em>MISTAKES</em> <br>
+            are proof that you are <br> <em>TRYING.</em>
+            </i>
         </p>
 
         
@@ -51,7 +53,7 @@
             </tr>
         </table>
     </div>
-
+<br>
     <div>
     <h3>Hobbies</h3>
     <ul>
@@ -90,7 +92,7 @@
 <br>
 
     <div id="nextpage">
-    <p> &lt; &lt;  <a href="https://github.com/WendyStoop/markdown-challenge"> Previous</a> || Wing Tong || <a href="https://github.com/A-Maarij/markdown-challenge/blob/main/Markup.md"> Next </a>  &gt; &gt;
+    <p> &lt; &lt;  <a href="https://maureenoldyck.github.io/markdown-warmup-css/"> Previous</a> || Wing Tong || <a href="https://willemdt369.github.io/markdown-warmup-css/"> Next </a>  &gt; &gt;
     </p>   
     </div> 
     </body>
